# geforce3

./: .gitignore  COMPILATION_FIXES.md  EDID_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  NOUVEAU_FIX.md  README.md  README_IMPLEMENTATION.md  REQUIREMENTS_VALIDATION.md  SOLUTION_SUMMARY.md  VBE_IMPLEMENTATION.md  VBE_IMPLEMENTATION_SUMMARY.md  VERIFICATION.md  device.conf  geforce3.c  geforce3.conf  geforce3.h  meson.build  test_edid  test_edid.c  test_fixes.sh  test_geforce3_edid.c  test_nouveau.py  verify_nouveau.sh
hw/display/: geforce3.c  geforce3.h
